# dodbot

./: .env  .gitignore  Cargo.toml  README.md  example-config.toml  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml
migrations/: 20210828153922_dodbot.sql  dodbot.sql
src/: config.rs  error.rs  events.rs  framework.rs  framework_functions.rs  guild.rs  main.rs  music.rs  shared_data.rs
src/commands/: admin.rs  general.rs  mod.rs  music.rs
src/music/: commands.rs  mod.rs  queue.rs  utils.rs
