[package]
name = "dodbot"
version = "2.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "framework", "gateway", "model", "standard_framework", "rustls_backend", "voice"]

[dependencies.tokio]
version = "1.10"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.songbird]
version = "0.1"
default-features = false
features = ["serenity-rustls", "gateway"]

[dependencies.lavalink-rs]
version = "0.8"
features = ["rustls", "serenity"]

[dependencies]
toml = "0.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"