[package]
name = "dodbot"
version = "2.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["cache", "client", "collector", "gateway", "model", "rustls_backend", "voice"]

[dependencies.tokio]
version = "1.15"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
default-features = false
features = ["serenity-rustls", "gateway"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs"
branch = "master"
features = ["rustls", "serenity"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "offline", "postgres"]

[dependencies]
toml = "0.5"
rand = "0.8"
regex = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = "0.11"
serde_json = "1.0"
async-minecraft-ping = "0.8"
base64 = "0.13"
genius-rs = "0.4"
rspotify = "0.11.3"
poise = { git="https://github.com/kangalioo/poise" }
serde_derive = "1.0.136"
serde = "1.0.136"
systemstat = "0.1.10"

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[patch.crates-io.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
